--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,5 @@ Imports:
     tidyr (>= 1.1.0),
     purrr (>= 0.2.5),
     shiny (>= 1.5.0),
-    shinyWidgets
+    shinyWidgets, 
+    stringr (>= 1.4.0)
