--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,5 @@ Imports:
     purrr (>= 0.2.5),
     shiny (>= 1.5.0),
     shinyWidgets, 
-    stringr (>= 1.4.0)
+    stringr (>= 1.4.0),
+    plotly 
