--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,4 @@
 exportPattern("^[[:alpha:]]+")
+importFrom("graphics", "layout")
+importFrom("stats", "filter", "fitted", "median", "p.adjust", "rnorm")
+importFrom("utils", "data", "tail")
