--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: CUSOMShinyHelpers
 Type: Package
 Title: CU School of Medicine Helper Functions for Shiny Applications
-Version: 1.8.2
+Version: 1.9.0
 Authors@R: person("Kyle", "Bartsch", email = "kyle.bartsch@cuanschutz.edu",
   role = c("aut", "cre"))
 Description: Consists of standard helper functions within shiny application delevelopment. 
@@ -10,10 +10,32 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
 Imports: 
+    rlang,
+    shiny (>= 1.5.0),
+    shinydashboard,
+    plotly,
     dplyr,
     tidyr (>= 1.1.0),
-    purrr (>= 0.2.5),
-    shiny (>= 1.5.0),
-    shinyWidgets, 
-    stringr (>= 1.4.0),
-    plotly
+    shinyWidgets,
+    stringr,
+    stringi,
+    vroom, 
+    Hmisc,
+    fgsea, 
+    rstatix,
+    shinyalert,
+    shinybusy
+Suggests:
+    ggplot2, 
+    glue, 
+    htmltools, 
+    shinyjs, 
+    DBI, 
+    odbc,
+    broom,
+    jsonlite,
+    purrr,
+    tibble, 
+    tidyselect, 
+    writexl, 
+    data.tree
