--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,3 +104,4 @@ importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
 importFrom(utils,tail)
 importFrom(vroom,vroom_write)
+importFrom(writexl,write_xlsx)
