--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: CUSOMShinyHelpers
 Type: Package
 Title: CU School of Medicine Helper Functions for Shiny Applications
-Version: 1.9.3
+Version: 1.9.4
 Authors@R: person("Kyle", "Bartsch", email = "kyle.bartsch@cuanschutz.edu",
   role = c("aut", "cre"))
 Description: Consists of standard helper functions within shiny application delevelopment. 
@@ -19,23 +19,23 @@ Imports:
     shinyWidgets,
     stringr,
     stringi,
-    vroom, 
+    vroom,
     Hmisc,
-    fgsea, 
+    fgsea,
     rstatix,
     shinyalert,
-    shinybusy
+    shinybusy,
+    writexl
 Suggests:
-    ggplot2, 
-    glue, 
-    htmltools, 
-    shinyjs, 
-    DBI, 
+    ggplot2,
+    glue,
+    htmltools,
+    shinyjs,
+    DBI,
     odbc,
     broom,
     jsonlite,
     purrr,
-    tibble, 
-    tidyselect, 
-    writexl, 
+    tibble,
+    tidyselect,
     data.tree
